# WebScraping2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
doc/ptt/: improvement_plan.md  scraping_strategy.md
doc/threads/: scraping_plan.md
google_search/: .env.example  README.md  agents.py  pyproject.toml  scraper.py  tasks.py  tools.py
google_search/doc/: plan.md
google_search/output/: 蝦皮賣家_site-threads.net_20260512_160945.json  蝦皮賣家外掛_20260512_154705.json  蝦皮賣家外掛_20260512_155051.json
ptt/: README.md  clean.py  index_scraper.py  scraper.py
ptt/output/: .Gossiping_蝦皮_progress.json  .e-seller_蝦皮_progress.json  蝦皮_20260506_152618.csv  蝦皮_20260506_154409.csv  蝦皮_20260506_155928.csv  蝦皮_Android_20260507_173620.json  蝦皮_BabyMother_20260507_173138.json  蝦皮_BeautySalon_20260507_173213.json  蝦皮_C_Chat_20260507_172653.json  蝦皮_Gossiping_20260507_161851.csv  蝦皮_Gossiping_20260507_161851.json  蝦皮_HatePolitics_20260507_172728.json  蝦皮_Headphone_20260507_173713.json  蝦皮_Lifeismoney_20260507_172746.json  蝦皮_MakeUp_20260507_173525.json  蝦皮_MobileComm_20260507_173356.json  蝦皮_MuscleBeach_20260507_173246.json  蝦皮_NSwitch_20260507_172858.json  蝦皮_PC_Shopping_20260507_173338.json  蝦皮_PlayStation_20260507_172840.json  蝦皮_Steam_20260507_172823.json  蝦皮_WomenTalk_20260507_173047.json  蝦皮_cookclub_20260507_173156.json  蝦皮_creditcard_20260507_173414.json  蝦皮_e-seller_20260507_162534.csv  蝦皮_e-seller_20260507_162534.json  蝦皮_e-shopping_20260507_173319.json  蝦皮_hypermall_20260507_173449.json  蝦皮_iOS_20260507_173602.json  (+2 more)
threads/: scraper.py
threads_meta/: README.md
(+42 files in other folders)
